manifests/argocd/vcluster/k8s/vcluster-vs-g.yaml
###
# vClusters accessing point g
###
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vcluster-g-vs
  namespace: team-g
spec:
  hosts:
  - "*"
  gateways:
  - istio-ingress/vcluster
  tls:
  - match:
    - port: 443
      sniHosts:
      - "vcluster-g.team-g.172.18.0.3.nip.io"
    route:
    - destination:
        host: vcluster-g
        port:
          number: 443
